--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,26 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+      if (localStorage.getItem("roles") !== "Admin") {
+        var Tawk_API = Tawk_API || {};
+        Tawk_API.visitor = {
+          email: localStorage.getItem("username"),
+          id: localStorage.getItem("id")
+        };
+        Tawk_LoadStart = new Date();
+        (function() {
+          var s1 = document.createElement("script"),
+            s0 = document.getElementsByTagName("script")[0];
+          s1.async = true;
+          s1.src = "https://embed.tawk.to/5d87178f9f6b7a4457e2f128/default";
+          s1.charset = "UTF-8";
+          s1.setAttribute("crossorigin", "*");
+          s0.parentNode.insertBefore(s1, s0);
+        })();
+      }
+    </script>
+    <!--End of Tawk.to Script-->
   </body>
 </html>
